feat: Integrate eXosip2 for GB28181 signaling (with mock headers)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,14 @@ project(DeviceAccessModule CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# Include local headers (for mock eXosip2)
+include_directories(${CMAKE_SOURCE_DIR}/include)
+
+# Find osip2 (which is installed)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(OSIP2 REQUIRED libosip2)
+
+include_directories(${OSIP2_INCLUDE_DIRS})
+link_directories(${OSIP2_LIBRARY_DIRS})
+
 add_subdirectory(src)
-
-# Find and link necessary libraries (e.g., Boost, OpenCV, etc.)
-# find_package(Boost REQUIRED COMPONENTS system thread)
-# target_link_libraries(DeviceAccessModule PRIVATE Boost::system Boost::thread)
-
-# Example for a simple web server library (e.g., Crow, Civetweb)
-# find_package(Civetweb REQUIRED)
-# target_link_libraries(DeviceAccessModule PRIVATE Civetweb::Civetweb)
