--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,11 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(OSIP2 REQUIRED libosip2)
 
+# Find libxml2
+pkg_check_modules(LIBXML2 REQUIRED libxml-2.0)
+
 include_directories(${OSIP2_INCLUDE_DIRS})
 link_directories(${OSIP2_LIBRARY_DIRS})
+include_directories(${LIBXML2_INCLUDE_DIRS})
 
 add_subdirectory(src)
