feat: Integrate FFmpeg and ZLMediaKit logic for Web stream conversion

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,12 @@ add_executable(DeviceAccessModule
     WebServer.cpp
 )
 
-target_link_libraries(DeviceAccessModule PRIVATE ${OSIP2_LIBRARIES} ${LIBXML2_LIBRARIES} pthread)
+target_link_libraries(DeviceAccessModule PRIVATE 
+    ${OSIP2_LIBRARIES} 
+    ${LIBXML2_LIBRARIES} 
+    ${AVCODEC_LIBRARIES} 
+    ${AVFORMAT_LIBRARIES} 
+    ${AVUTIL_LIBRARIES} 
+    ${SWSCALE_LIBRARIES} 
+    pthread
+)
